--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,3 +1,4 @@
+// frontend/src/locales/en.json
 {
   "app": {
     "name": "CleanTrack",
@@ -10,15 +11,20 @@
     "create": "Create",
     "update": "Update",
     "delete": "Delete",
+    "clearFilters": "Clear Filters",
     "cancel": "Cancel",
     "save": "Save",
+    "saving": "Saving...",
     "edit": "Edit",
+    "view": "View",
     "close": "Close",
     "submit": "Submit",
     "back": "Back",
     "next": "Next",
     "previous": "Previous",
     "actions": "Actions",
+    "all": "All",
+    "confirmDelete": "Confirm Delete",
     "noDescription": "No description",
     "active": "Active",
     "inactive": "Inactive",
@@ -28,7 +34,7 @@
     "language": "Language",
     "search": "Search",
     "backToDashboard": "Back to Dashboard",
-    "pagination": "Showing {{from}} to {{to}} of {{total}} results"
+    "pagination": "Showing {from} to {to} of {total} results"
   },
   "auth": {
     "login": "Log In",
@@ -46,6 +52,7 @@
   },
   "validation": {
     "required": "This field is required",
+    "checklistRequired": "All checklist items must have an English title",
     "invalidEmail": "Please enter a valid email address",
     "passwordLength": "Password must be at least 8 characters long",
     "passwordMatch": "Passwords do not match"
@@ -54,10 +61,11 @@
     "dashboard": "Dashboard",
     "locations": "Locations",
     "submissions": "Submissions",
-    "users": "Users"
+    "users": "Users",
+    "create": "Create New"
   },
   "dashboard": {
-    "welcome": "Welcome, {{name}}",
+    "welcome": "Welcome, {name}",
     "stats": {
       "total": "Total Submissions",
       "completionRate": "Avg. Completion Rate",
@@ -74,19 +82,32 @@
     "addNew": "Add New Location",
     "addLocation": "Add Location",
     "editLocation": "Edit Location",
+    "details": "Location Details",
+    "checklistItems": "Checklist Items",
+    "addItem": "Add Item",
+    "item": "Item",
+    "titleEn": "Title (English)",
+    "titleEnPlaceholder": "e.g., Clean the windows",
+    "titleAm": "Title (Armenian)",
+    "titleAmPlaceholder": "Armenian translation",
+    "titleRu": "Title (Russian)",
+    "titleRuPlaceholder": "Russian translation",
     "deleteConfirmation": "Delete Location?",
-    "deleteWarning": "Are you sure you want to delete \"{{name}}\"? This action cannot be undone.",
+    "deleteWarning": "Are you sure you want to delete \"{name}\"? This action cannot be undone.",
     "createSuccess": "Location created successfully!",
     "updateSuccess": "Location updated successfully!",
     "name": "Name",
-    "description": "Description",
+    "namePlaceholder": "e.g., Departure Hall",
     "status": "Status",
     "isActive": "Active",
+    "tasks": "Tasks",
     "noLocations": "No locations found",
-    "noSearchResults": "No locations found matching \"{{query}}\""
+    "noSearchResults": "No locations found matching \"{query}\"",
+    "createFirst": "Create your first location to get started"
   },
   "submissions": {
     "title": "Submissions",
+    "createNew": "Create New Submission",
     "add": "Add Submission",
     "view": "View Submission",
     "date": "Date",
@@ -94,12 +115,19 @@
     "location": "Location",
     "submittedAt": "Submitted At",
     "completionRate": "Completion Rate",
+    "completion": "Completion",
     "taskRatings": "Task Ratings",
+    "noTaskRatings": "No task ratings available",
     "rating": "Rating",
     "notes": "Notes",
     "photos": "Photos",
+    "noLocations": "No locations available",
+    "noLocationsAvailable": "No locations are available for submissions",
+    "noLocationsTitle": "No Locations Available",
+    "noLocationsAdminMessage": "You need to create at least one location before you can start submitting cleaning reports.",
+    "noLocationsStaffMessage": "There are no locations available for submissions. Please contact an administrator to set up locations.",
     "noSubmissions": "No submissions found",
-    "noSearchResults": "No submissions found matching your search criteria",
+    "noSubmissionsFiltered": "No submissions found for the selected filters",
     "deleteConfirmation": "Are you sure you want to delete this submission?"
   },
   "users": {
@@ -123,7 +151,7 @@
     "createSuccess": "User created successfully!",
     "updateSuccess": "User updated successfully!",
     "deleteConfirmation": "Delete User?",
-    "deleteWarning": "Are you sure you want to delete {{name}} ({{role}})? This action cannot be undone."
+    "deleteWarning": "Are you sure you want to delete {name} ({role})? This action cannot be undone."
   },
   "tracker": {
     "title": "Cleaning Tracker",
@@ -141,6 +169,7 @@
   },
   "errors": {
     "somethingWentWrong": "Something went wrong. Please try again.",
+    "saveFailed": "Failed to save. Please try again.",
     "pageNotFound": "Page Not Found",
     "pageNotFoundDescription": "The page you are looking for doesn't exist or has been moved.",
     "submissionNotFound": "Submission not found",
